# Bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: black.yml  codeql.yml  pylint.yml
stupiditydb/: bot.py  config.py.example
stupiditydb/cogs/: reviews.py  stupidity.py  utility.py  windows10.py
stupiditydb/lib/: base.py  reviewdb.py  stupid.py  stupiditydb.py
