[tool.poetry]
name = "stupiditydb-bot"
version = "0.1.0"
description = "Bot for StupidityDB"
authors = ["StupidityDB <postmaster@example.lan>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "stupiditydb_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.2"
jishaku = "^2.5.1"
reactionmenu = "^3.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
