[tool.poetry]
name = "stupiditydb-bot"
version = "0.1.0"
description = "Bot for StupidityDB"
authors = ["StupidityDB <postmaster@example.lan>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "stupiditydb_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
discord = "*"
jishaku = "*"
reactionmenu = "*"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
